# imdb-rename

./: README.md  imdb_rename.py  main.py  pyproject.toml  requirements.txt
