[tool.poetry]
name = "imdb-lookup"
version = "0.1.0"
description = ""
authors = ["Alan Evans <thealanevans@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
rich = "13.7.1"
click = "8.1.7"
duckduckgo-search = "5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
